# tudelft-graph-ml-football-predictions

./: .gitignore  pyproject.toml  requirements.txt  rnn_soccer_model.pt  test.ipynb
data/processed_cumulative_2015-2015-5/: data_0.pt  data_1.pt  data_10.pt  data_100.pt  data_1000.pt  data_1001.pt  data_1002.pt  data_1003.pt  data_1004.pt  data_1005.pt  data_1006.pt  data_1007.pt  data_1008.pt  data_1009.pt  data_101.pt  data_1010.pt  data_1011.pt  data_1012.pt  data_1013.pt  data_1014.pt  data_1015.pt  data_1016.pt  data_1017.pt  data_1018.pt  data_1019.pt  data_102.pt  data_1020.pt  data_1021.pt  data_1022.pt  data_1023.pt  data_1024.pt  data_1025.pt  data_1026.pt  data_1027.pt  data_1028.pt  data_1029.pt  data_103.pt  data_1030.pt  data_1031.pt  data_1032.pt  (+7218 more)
data/processed_temporal_2015-2015-5/: sequence_0.pt  sequence_10.pt  sequence_100.pt  sequence_101.pt  sequence_103.pt  sequence_105.pt  sequence_106.pt  sequence_109.pt  sequence_111.pt  sequence_114.pt  sequence_118.pt  sequence_119.pt  sequence_12.pt  sequence_121.pt  sequence_122.pt  sequence_123.pt  sequence_124.pt  sequence_127.pt  sequence_133.pt  sequence_135.pt  sequence_136.pt  sequence_137.pt  sequence_138.pt  sequence_139.pt  sequence_141.pt  sequence_142.pt  (+162 more)
src/: criterion.py  dataloader.py  dataloader_paired.py  dataloader_prova.py  dataloader_prova2.py  experiment.py  experiment_configs.py  experiment_disjoint.py  experiment_gat.py  gat.py  our_dataloader.py  result_metrics.py  rnn.ipynb  rnn.py  saving_results.py  scrap_data.py  scrape_data.py  testRNN.ipynb  test_rnn.py  test_varma.py  varma.py
(+543 files in other folders)
