[project]
name = "tudelft-graph-ml-football-predictions"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.7",
    "rich>=13.9.4",
    "soccerdata>=1.8.7",
    "torch>=2.8.0",
    "torch-geometric>=2.6.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "black[jupyter]>=25.9.0",
    "isort>=6.1.0",
]
